--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,7 @@
   
   <div class="container_16">
     <figure>
-      
-      <img src="C:\Users\Axel\Desktop\Nueva carpeta (9)\1516362027117.jpg">
+      <img src="1516362027117.jpg">
     </figure>
     <hgroup>
       
